# readme-project

./: LICENSE  Makefile  README.md  jsonschema.yaml  list_repos.sh  pyproject.toml  sample.csv  schema.yaml  test.yaml  validate.py
code/: extract_readmes.py  list_repos.sh  pdftotxt.py
data-raw/: 17262_README.tex  17262_read_inputs.py  19690_README.md  22272.txt  22564.docx  23594_readme.txt  23976_README.md  24402_Readme.docx  24767.docx  25077.txt  25098_README.md  25098_README.rtf  25154.txt  25364.md  25418.txt  26008.docx  26128_ReadMe.txt  26128_Readme.txt  26299.md  26437_README.docx  26804.docx  26888_README.md  26902_README.docx  26902_readc.m  26908.docx  26990_read_data.R  27221.ado  27428.txt  27528_readme.docx  27804_README.md  27804_ReadMeFile_CM_TITC2020f.docx  27827-1.txt  27827.txt  27863_README.txt  28040_README.txt  28063.txt  28091.rtf  28147_readColData.m  28147_readme.txt  28147_readpolicy30.c  (+33 more)
data-raw/10624/: README.txt
data-raw/18075/: README.md
data-raw/23441/: README.md
data-raw/23483/: readme.txt
data-raw/23580/: readme.docx
data-raw/23594/: README.md  Readme_main.docx  readme.txt
data-raw/23961/: README.md  README.txt
data-raw/23975/: Readme File Replication MS23975.docx  readme_Fortran-codes-and-Model-Output.txt  readme_data.txt  readme_replicationMS23975.txt
data-raw/23976/: README.txt
data-raw/24152/: README.txt
output/: 23287.md  27726.docx  27915_READMEpublic.doc  29108.docx  29944_Readme.docx  30064_read_lf.m  30141.rtf  30253.txt  30489.txt  31601_Readme.docx  31675_readme.rtf
temp/: gh_list.csv  github.json
(+105 files in other folders)
